<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sportag</string>
    <string name="action_settings">Settings</string>
    <string name="action_events">Meus Eventos</string>
    <string name="action_friends">Amigos</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_map">Mapa</string>
    <string name="title_activity_profile">Perfil</string>
    <string name="title_activity_event">Eventos</string>
    <string name="title_activity_event_discussion">Discussão</string>
    <string name="title_activity_friends">Amigos</string>
    <string name="title_activity_friend_chat">Mensagens</string>

    <!-- Profile -->
    <string name="tv_profile_name">Nome</string>
    <string name="tv_profile_pref">Esportes preferidos</string>
    <string name="btn_profileMoreSports">&#8230;</string>
    <string name="btn_send">Enviar</string>
    <string name="cancel">Cancelar</string>
    <string name="eventName">Nome do Evento</string>
    <string name="eventPrivacy">Privado</string>
    <string name="eventAddress">Endereço</string>
    <string name="eventDate">Data</string>
    <string name="btn_eventDiscussion">Ver Discussão</string>

    <string-array name="sports_array">
        <item>Futebol</item>
        <item>Vôlei</item>
        <item>Handebol</item>
        <item>Basquete</item>
        <item>Natação</item>
        <item>Corrida</item>
        <item>Caminhada</item>
        <item>Bike</item>
        <item>Skate</item>
        <item>Patinação</item>
    </string-array>
    <string-array name="fakeLocation_array">
        <item>Praça da Ponta Negra</item>
        <item>Parque dos Bilhares</item>
        <item>Parque Jéfferson Péres</item>
        <item>Av. do Turismo</item>
        <item>CSU</item>
        <item>Largo São Sebastião</item>
    </string-array>
    <string-array name="privacy_array">
        <item>Público</item>
        <item>Privado</item>
    </string-array>

    <string name="title_activity_event_management">Meus Eventos</string>
    <string name="title_section1">Confirmados</string>
    <string name="title_section2">Criados</string>
    <string name="title_section3">Convites</string>
    <string name="action_add_event">Adicionar evento</string>
    <string name="title_activity_event_creation">Criar um evento</string>
    <string name="atualizar">Atualizar</string>
    <string name="btn_eventInvitation">Convidar amigos</string>
    <string name="eventAttendants">Quem vai</string>

</resources>
